--- a/network/config.json
+++ b/network/config.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "data": "data.json",
   "logo": {
-    "file": "https://www.epfl.ch/about/overview/wp-content/uploads/2020/07/logo-epfl.png",
+    "file": "https://www.epfl.ch/wp/5.5/wp-content/themes/wp-theme-2018/assets/svg/epfl-logo.svg?refresh\u003dnow",
     "link": "https://www.epfl.ch/en/",
     "text": "Alexander Popescu"
   },
