--- a/network/config.json
+++ b/network/config.json
@@ -5,7 +5,7 @@
   "logo": {
     "file": "",
     "link": "",
-    "text": "ADAcadabra"
+    "text": "AbracADAbra"
   },
   "text": {
     "more": "The network is clustered by 4 clusters",
